--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.udh_redsocial">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -14,20 +16,28 @@
         android:theme="@style/Theme.Udh_RedSocial"
         tools:targetApi="31">
         <activity
+            android:name=".VerPost"
+            android:exported="false"
+            android:parentActivityName=".Inicio"/>
+        <activity
             android:name=".CrearPost"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".Inicio"/>
         <activity
             android:name=".Datos"
             android:exported="false" />
         <activity
             android:name=".Inicio"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".MainActivity"/>
         <activity
             android:name=".Registro"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".Login" />
         <activity
             android:name=".Login"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".MainActivity"/>
         <activity
             android:name=".PantallaPrincipal"
             android:exported="true">
